// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SwitchInput.vue > renders OXD Switch Input 1`] = `
"<div data-v-7272f18a="" class="oxd-switch-wrapper"><label data-v-7272f18a="" class="">
    <!--v-if--><input data-v-7272f18a="" label="Checkbox" type="checkbox"><span data-v-7272f18a="" class="oxd-switch-input oxd-switch-input--active --label-right"></span>
  </label></div>"
`;

exports[`SwitchInput.vue > should renders OXD Input with error 1`] = `
"<div data-v-7272f18a="" class="oxd-switch-wrapper"><label data-v-7272f18a="" class="">
    <!--v-if--><input data-v-7272f18a="" label="Checkbox" type="checkbox"><span data-v-7272f18a="" class="oxd-switch-input oxd-switch-input--active oxd-switch-input--error --label-right"></span>
  </label></div>"
`;
